Update ExtractSru.java
Address Codacy Issues